# patika

./: CMakeLists.txt  LICENSE  README.md  ROADMAP.md  build.bat  build.sh  run_tests.bat  run_tests.sh
.cache/clangd/index/: patika_commands.c.3BC5F81123E67234.idx  patika_constant.h.0F486254F48ED48A.idx  patika_core.c.6FB60810FBD71752.idx  patika_core.h.7FC3B924927BE626.idx  patika_internal.h.705AD432E05A79D5.idx  patika_log.h.C2AC462AF395A4D0.idx  patika_map.c.070E2DC5DF3F3293.idx  patika_mpsc.c.929288D4E1BC86AA.idx  patika_pathfinding.c.5F05544B90F63655.idx  patika_pool.c.A72A98C559864573.idx  patika_rng.c.80991DF263BF9E6B.idx  patika_snapshot.c.50E466181080C787.idx  patika_spsc.c.6585E3E332D66C4F.idx  patika_types.h.78F80F5DA8A03AE5.idx
.ccls-cache/@@home@pytgion@patika_c/: @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-least.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wchar.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@sys@cdefs.h.blob  @usr@lib@clang@21@include@__stddef_header_macro.h.blob  @usr@lib@clang@21@include@__stddef_max_align_t.h.blob  @usr@lib@clang@21@include@__stddef_null.h.blob  @usr@lib@clang@21@include@__stddef_nullptr_t.h.blob  @usr@lib@clang@21@include@__stddef_offsetof.h.blob  @usr@lib@clang@21@include@__stddef_ptrdiff_t.h.blob  @usr@lib@clang@21@include@__stddef_size_t.h.blob  @usr@lib@clang@21@include@__stddef_wchar_t.h.blob  @usr@lib@clang@21@include@stddef.h.blob  @usr@lib@clang@21@include@stdint.h.blob
.ccls-cache/@home@pytgion@patika_c/: include@patika_constant.h  include@patika_constant.h.blob  include@patika_core.h  include@patika_core.h.blob  include@patika_types.h.blob
.github/workflows/: main.yml
include/: patika.h  patika_core.h  patika_log.h  patika_types.h
include/.ccls-cache/@@home@pytgion@patika_c@include/: @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-least.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wchar.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@sys@cdefs.h.blob  @usr@lib@clang@21@include@__stddef_header_macro.h.blob  @usr@lib@clang@21@include@__stddef_max_align_t.h.blob  @usr@lib@clang@21@include@__stddef_null.h.blob  @usr@lib@clang@21@include@__stddef_nullptr_t.h.blob  @usr@lib@clang@21@include@__stddef_offsetof.h.blob  @usr@lib@clang@21@include@__stddef_ptrdiff_t.h.blob  @usr@lib@clang@21@include@__stddef_size_t.h.blob  @usr@lib@clang@21@include@__stddef_wchar_t.h.blob  @usr@lib@clang@21@include@stddef.h.blob  @usr@lib@clang@21@include@stdint.h.blob
include/.ccls-cache/@home@pytgion@patika_c@include/: patika_constant.h.blob  patika_core.h.blob  patika_types.h.blob
include/patika/: api.h  config.h  enums.h  events.h  patika_log.h  snapshot.h  types.h
include/patika/commands/: agent.h  barrack.h  base.h  guard.h
src/: patika_collision.c  patika_commands.c  patika_core.c  patika_log.c  patika_map.c  patika_movement.c  patika_mpsc.c  patika_pathfinding.c  patika_pool.c  patika_rng.c  patika_snapshot.c  patika_spsc.c  patika_utility.c
src/.ccls-cache/@@home@pytgion@patika_c@src/: @home@pytgion@patika_c@include@patika_constant.h.blob  @home@pytgion@patika_c@include@patika_core.h  @home@pytgion@patika_c@include@patika_core.h.blob  @home@pytgion@patika_c@include@patika_types.h.blob  @usr@include@alloca.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-least.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@__locale_t.h.blob  @usr@include@bits@types@__sigset_t.h.blob  @usr@include@bits@types@clock_t.h.blob  @usr@include@bits@types@clockid_t.h.blob  @usr@include@bits@types@locale_t.h.blob  @usr@include@bits@types@sigset_t.h.blob  @usr@include@bits@types@struct_timespec.h.blob  @usr@include@bits@types@struct_timeval.h.blob  @usr@include@bits@types@time_t.h.blob  @usr@include@bits@types@timer_t.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@uintn-identity.h.blob  @usr@include@bits@waitflags.h.blob  @usr@include@bits@waitstatus.h.blob  (+25 more)
src/.ccls-cache/@home@pytgion@patika_c@src/: internal@patika_internal.h.blob  patika_commands.c  patika_commands.c.blob  patika_core.c  patika_core.c.blob  patika_map.c.blob  patika_pathfinding.c.blob  patika_pool.c  patika_pool.c.blob  patika_rng.c  patika_rng.c.blob  (+2 more)
src/internal/: patika_internal.h
src/tests/: test_agent_pool.c  test_barrack_pool.c  test_commands.c  test_integration_basic.c  test_integration_multi_agent.c  test_map.c  test_mpsc_queue.c  test_pathfinding.c  test_rng.c  test_spsc_queue.c  test_stress_capacity.c  test_stress_queues.c
(+40 files in other folders)
